--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
     <link href="dist/output.css" rel="stylesheet"> 
 </head>
 <body>
+    <div class="grid place-items-center pt-60">
+        <h1 class="text-sm font-bold">localStorage Register</h1>
+        <div class="pt-6 flex flex-col gap-3 text-sm">
+            <input type="text" id="email" class="border rounded-md w-60 px-2 py-0.5" placeholder="Email Address">
+            <input type="text" id="password" class="border rounded-md w-60 px-2 py-0.5" placeholder="Password">
+        </div>
+        <div class="py-4">
+            <button type="button" id="register" class="border bg-gray-300 rounded-md text-sm px-2 py-0.25">Register</button>
+        </div>
+    </div>
 </body>
 </html>
