feat(signup/login): implemented sign up/log in split redirection

--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     <link href="dist/output.css" rel="stylesheet"> 
 </head>
 <body>
-    <div class="grid place-items-center pt-60">
-        <h1 class="text-sm font-bold">localStorage Register</h1>
-        <div class="pt-6 flex flex-col gap-3 text-sm">
-            <input type="text" id="username" class="border rounded-md w-60 px-2 py-0.5" placeholder="Username">
-            <input type="text" id="email" class="border rounded-md w-60 px-2 py-0.5" placeholder="Email Address">
-            <input type="text" id="password" class="border rounded-md w-60 px-2 py-0.5" placeholder="Password">
-        </div>
-        <div class="py-4">
-            <button type="button" id="register" class="border bg-gray-300 rounded-md text-sm px-2 py-0.25">Register</button>
+    <div class="grid place-items-center pt-75">
+        <h1 class="text-md font-bold">localStorage Register</h1>
+        <div class="flex flex-row gap-2 py-2">
+            <button type="button" href="sign-up/index.html" class="text-sm border rounded-md px-2 py-0.25 hover:bg-gray-100">Sign Up</button>
+            <button type="button" href="log-in/index.html" class="text-sm border rounded-md px-2 py-0.25 hover:bg-gray-100">Log In</button>
         </div>
     </div>
 </body>
