feat(login): implemented login page w/ username and email and login

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="grid place-items-center pt-75">
         <h1 class="text-md font-bold">localStorage Register</h1>
         <div class="flex flex-row gap-2 py-2">
-            <button type="button" href="sign-up/index.html" class="text-sm border rounded-md px-2 py-0.25 hover:bg-gray-100">Sign Up</button>
-            <button type="button" href="log-in/index.html" class="text-sm border rounded-md px-2 py-0.25 hover:bg-gray-100">Log In</button>
+            <a href="/sign-up/index.html" class="text-sm border rounded-md px-2 py-0.25 hover:bg-gray-100">Sign Up</a>
+            <a href="log-in/index.html" class="text-sm border rounded-md px-2 py-0.25 hover:bg-gray-100">Log In</a>
         </div>
     </div>
 </body>
