--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -15,7 +15,7 @@
             <input type="text" id="password" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Password">
         </div>
         <div class="py-4">
-            <button type="button" id="register" class="border bg-gray-300 rounded-md text-sm px-2 py-0.25">Sign Up</button>
+            <button type="button" id="register" class="border rounded-md text-sm px-2 py-0.25 hover:bg-gray-100">Sign Up</button>
         </div>
     </div>
 </body>
