feat(updated sign-up file structure): moved index.html (sign-up) into sign-up, updated log-in create an account redirect href

--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>localStorage Sign Up</title>
+    <title>localStorage Register</title>
     <link href="dist/output.css" rel="stylesheet"> 
 </head>
 <body>
@@ -17,6 +17,12 @@
         <div class="py-4">
             <button type="button" id="register" class="border rounded-md text-sm px-2 py-0.25 hover:bg-gray-100">Sign Up</button>
         </div>
+        <div class="text-xs">
+            <h1>
+                Already have an account? <a href="log-in/index.html" class="font-bold underline">Log In</a>
+            </h1>
+        </div>
+    </div>
     </div>
 </body>
 </html>
