--- a/log-in/index.html
+++ b/log-in/index.html
@@ -10,11 +10,16 @@
     <div class="grid place-items-center pt-60">
         <h1 class="text-sm font-bold">localStorage Log In</h1>
         <div class="flex flex-col gap-3 pt-6">
-            <input class="border rounded-md px-2 py-0.25 w-60 text-sm" placeholder="username">
-            <input class="border rounded-md px-2 py-0.25 w-60 text-sm" placeholder="password">
+            <input class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Username">
+            <input class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Password">
         </div>
         <div class="py-4">
             <button class="border rounded-md px-2 py-0.25 text-sm hover:bg-gray-100">Log In</button>
+        </div>
+        <div class="text-xs">
+            <h1>
+                Don't have an account? <a href="./sign-up/index.html" class="font-bold underline">Create an account</a>
+            </h1>
         </div>
     </div>
 </body>
