feat(add id): added ids to inputs

--- a/log-in/index.html
+++ b/log-in/index.html
@@ -10,8 +10,8 @@
     <div class="grid place-items-center pt-60">
         <h1 class="text-sm font-bold">localStorage Log In</h1>
         <div class="flex flex-col gap-3 pt-6">
-            <input class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Username">
-            <input class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Password">
+            <input id="login-username" class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Username">
+            <input id="login-password" class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Password">
         </div>
         <div class="py-4">
             <button class="border rounded-md px-2 py-0.25 text-sm hover:bg-gray-100">Log In</button>
