--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -10,9 +10,9 @@
     <div class="grid place-items-center pt-60">
         <h1 class="text-sm font-bold">localStorage Sign Up</h1>
         <div class="pt-6 flex flex-col gap-3">
-            <input type="text" id="username" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Username">
-            <input type="text" id="email" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Email Address">
-            <input type="text" id="password" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Password">
+            <input type="text" id="signup-username" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Username">
+            <input type="text" id="signup-email" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Email Address">
+            <input type="text" id="signup-password" class="border rounded-md w-60 px-2 py-0.5 text-sm" placeholder="Password">
         </div>
         <div class="py-4">
             <button type="button" id="register" class="border rounded-md text-sm px-2 py-0.25 hover:bg-gray-100">Sign Up</button>
