--- a/log-in/index.html
+++ b/log-in/index.html
@@ -2,25 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width intiial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>localStorage Log In</title>
-    <link href="dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body>
     <div class="grid place-items-center pt-60">
         <h1 class="text-sm font-bold">localStorage Log In</h1>
         <div class="flex flex-col gap-3 pt-6">
-            <input id="login-username" class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Username">
-            <input id="login-password" class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Password">
+            <input type="text" id="login-username" class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Username">
+            <input type="text" id="login-password" class="border rounded-md px-2 py-0.5 w-60 text-sm" placeholder="Password">
         </div>
         <div class="py-4">
-            <button class="border rounded-md px-2 py-0.25 text-sm hover:bg-gray-100">Log In</button>
+            <button type="button" id="login" class="border rounded-md px-2 py-0.25 text-sm hover:bg-gray-100">Log In</button>
         </div>
         <div class="text-xs">
             <h1>
-                Don't have an account? <a href="./sign-up/index.html" class="font-bold underline">Create an account</a>
+                Don't have an account? <a href="../sign-up/index.html" class="font-bold underline">Create an account</a>
             </h1>
         </div>
     </div>
 </body>
+<script src="../js/script.js"></script>
 </html>
