--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>localStorage Register</title>
-    <link href="dist/output.css" rel="stylesheet"> 
+    <link href="../dist/output.css" rel="stylesheet"> 
 </head>
 <body>
     <div class="grid place-items-center pt-60">
@@ -19,10 +19,10 @@
         </div>
         <div class="text-xs">
             <h1>
-                Already have an account? <a href="log-in/index.html" class="font-bold underline">Log In</a>
+                Already have an account? <a href="../log-in/index.html" class="font-bold underline">Log In</a>
             </h1>
         </div>
     </div>
-    </div>
 </body>
+<script src="../js/script.js"></script>
 </html>
