--- a/success/index.html
+++ b/success/index.html
@@ -10,5 +10,11 @@
    <div class="place-items-center pt-60">
         <h1 class="text-xl font-bold">67</h1>
    </div>
+   <div>
+        <a href="./sign-up/index.html" class="text-xs font-bold underline">
+            Back
+        </a>
+   </div>
+   <link src="./js/script.js">
 </body>
 </html>
