feat(success/index.html links): fixed links for scripts

--- a/success/index.html
+++ b/success/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>localStorage Innerframe</title>
-    <link href="dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body>
-   <div class="place-items-center pt-60">
-        <h1 class="text-xl font-bold">67</h1>
+   <div class="grid place-items-center pt-60">
+        <h1 class="text-9xl font-bold">67</h1>
+        <div class="pt-6">
+            <a href="./sign-up/index.html" class="text-xs font-bold underline">
+                Back
+            </a>
+        </div>
    </div>
-   <div>
-        <a href="./sign-up/index.html" class="text-xs font-bold underline">
-            Back
-        </a>
-   </div>
-   <link src="./js/script.js">
+   <script src="../js/script.js"></script>
 </body>
 </html>
