--- a/success/index.html
+++ b/success/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <div class="grid place-items-center pt-60">
-        <h1 class="text-9xl font-bold">67</h1>
+        <h1 class="text-9xl font-bold">🫲67🫱</h1>
         <div class="pt-6">
             <a href="./sign-up/index.html" class="text-xs font-bold underline">
                 Back
